# claimpilot-harness

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  case_pack.md  config.yml  good_first_case.md
.github/workflows/: ci.yml  pages.yml
benchmarks/: baseline-arena.json  models.example.json
cases/: auto-bodily-injury-001.json  auto-collision-001.json  health-bill-001.json  health-experimental-treatment-001.json  medical-privacy-injection-001.json  pet-preexisting-001.json  property-fire-invoice-001.json  property-water-damage-001.json  template-case.json  travel-injection-001.json  workers-comp-injury-001.json
claimpilot_harness/: __init__.py  agents.py  cases.py  catalog.py  cli.py  experiments.py  models.py  replay.py  runner.py  scorer.py  suite.py  validator.py
docs/: architecture.md  case-contribution-guide.md  case-format.md  community-case-pack.md  connect-real-agents.md  evaluation-methodology.md  human-review.md  launch-notes.md  launch-v0.2.md  model-arena.md  openai-compatible.md  risk-taxonomy.md  scoring-rubric.md  why-claimpilot.md  zh-CN.md
docs/demo/: app.js  arena-results.json  auto-bodily-injury-001-cautious-baseline-replay.html  auto-bodily-injury-001-demo-replay.html  auto-bodily-injury-001-risky-baseline-replay.html  (+45 more)
examples/: http_agent.py  simple_agent.py
scripts/: build_demo_site.py  make_demo_gif.py
tests/: test_cli.py  test_experiments.py  test_http_agent.py  test_openai_adapter.py  test_scorer.py
(+3 files in other folders)
